feat: Remove unnecessary code, use proper message classes #1257